<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="app_name2">Playlist maker</string>

    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="dark_theme">Темная тема</string>
    <string name="share_with_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="share_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="sendToSupport_email">drensy@rambler.ru</string>
    <string name="sendToSupport_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="sendToSupport_text">Спасибо разработчикам и разработчицам за крутое приложение</string>
    <string name="userAgreement_url">https://yandex.ru/legal/practicum_offer/</string>

    <string name="nothing_search_found_text">Ничего не нашлось</string>
    <string name="connection_error_text1">Проблемы со связью</string>
    <string name="connection_error_text2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reConnect">Обновить</string>

    <string name="your_search">Вы искали</string>
    <string name="clean_search_list">Очистить историю</string>

    <string name="song_duration">Длительность</string>
    <string name="song_album">Альбом</string>
    <string name="song_year">Год</string>
    <string name="song_style">Жанр</string>
    <string name="song_country">Страна</string>


    <string name="your_media_empty">Ваша медиатека пуста</string>
    <string name="your_playlist_empty">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>


    <string name="tab1">Избранные треки</string>
    <string name="tab2">Плейлисты</string>


    <string name="new_album_name">Название*</string>
    <string name="new_album_description">Описание</string>
    <string name="create">Создать</string>
    <string name="savePlaylist">Сохранить</string>
    <string name="change_playlist_title">Создание плейлиста</string>

    <string name="addToPlaylist">Добавить в плейлист</string>

    <plurals name="tracks_count">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>


    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>


    <string name="share">Поделиться</string>
    <string name="edit_playlist_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>

</resources>