<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context="com.bignerdranch.playlistmaker.search.ui.SearchFragment"

    android:background="@color/colors_FFFFFFFF_1A1B22"
    android:orientation="vertical"
    android:paddingTop="@dimen/dimen14"
    android:paddingEnd="@dimen/dimen16"
    android:paddingStart="@dimen/dimen16">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/sp16">


        <TextView
            style="@style/YS_Medium_22"
            android:text="@string/search" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/search_shape"
            android:drawableStart="@drawable/search"
            android:drawablePadding="@dimen/search_drawablePadding"
            android:drawableTint="@color/search_hint"
            android:backgroundTint="@color/searh_box"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="40dp"
            android:paddingBottom="8dp"
            android:textColor="@color/main_text_buttons"
            android:textColorHint="@color/search_hint"
            android:textCursorDrawable="@color/color_3772E7"
            android:textSize="@dimen/sp16"

            android:imeOptions="actionDone"
            android:singleLine="true"
            />

        <ImageView
            android:id="@+id/closeImageViewButton"
            android:layout_gravity="center_vertical|end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_icon"
            app:tint="@color/close_button"
            android:visibility="gone"
            android:paddingEnd="14dp"/>
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:indeterminateTint="@color/color_3772E7"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackRecycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen24"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_track"
        tools:visibility="gone" />


        <!-- Сохраненный список треков -->
        <LinearLayout

            style="@style/linear_layout_for_search"
            android:id="@+id/layoutForHistoryTracks" >

            <TextView
                style="@style/text_search_error"
                android:text="@string/your_search"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trackHistoryRecycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/dimen24"
                tools:listitem="@layout/item_track"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <Button
                style="@style/button_for_updateButton_and_clearSearchList"

                android:id="@+id/tracksHistoryClearButton"
                android:text="@string/clean_search_list" />
        </LinearLayout>



        <!-- Плейсхолдер при ненаходе песен -->
        <LinearLayout
            style="@style/linear_layout_for_search"
            android:visibility="invisible"
            android:id="@+id/placeholderLayoutNotFound" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/error_nothing_found" />

            <TextView
                style="@style/text_search_error"
                android:text="@string/nothing_search_found_text"/>
        </LinearLayout>

        <!-- Плейсхолдер при ошибке подключения -->
        <LinearLayout
            style="@style/linear_layout_for_search"
            android:visibility="invisible"
            android:id="@+id/placeholderLayoutConnectionError" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/error_connection" />

            <TextView
                style="@style/text_search_error"
                android:text="@string/connection_error_text1"/>

            <TextView
                style="@style/text_search_error"
                android:text="@string/connection_error_text2"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:gravity="center" />

            <Button
                style="@style/button_for_updateButton_and_clearSearchList"
                android:id="@+id/updateButton"
                android:text="@string/reConnect" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>