<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".media.new_playlist.ui.NewPlaylistFragment"

    android:clickable="true"
    android:focusableInTouchMode="true"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colors_FFFFFFFF_1A1B22"
    android:paddingTop="@dimen/dimen14"
    android:paddingEnd="@dimen/dimen16"
    android:paddingStart="@dimen/dimen16" >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/arrow_back"
        style="@style/arrow_back"
        app:layout_constraintTop_toTopOf="@id/arrow_back"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/YS_Medium_22"
        android:text="@string/new_playlist"
        android:layout_marginStart="32dp"

        app:layout_constraintStart_toEndOf="@+id/arrow_back"
        app:layout_constraintTop_toTopOf="@+id/arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/arrow_back" />

<ImageView
    android:id="@+id/imageSelectImageView"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:background="@drawable/new_playlist_outline"
    android:src="@drawable/new_playlist_add_pic"
    android:padding="90dp"
    android:layout_marginTop="42dp"
    android:layout_marginBottom="16dp"

    app:layout_constraintTop_toBottomOf="@id/arrow_back"
    app:layout_constraintBottom_toTopOf="@+id/guideLine1"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"  />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageSelectedImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        android:scaleType="centerCrop"

        app:shapeAppearanceOverlay="@style/RoundedImageStyle"

        app:layout_constraintBottom_toTopOf="@+id/guideLine1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrow_back"
        app:layout_constraintEnd_toEndOf="parent"  />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"

        style="@style/TextInputLayout"


        android:layout_marginTop="16dp"
        android:hint="@string/new_album_name"

        android:imeOptions="actionDone"

        app:endIconTint="@color/color_3772E7"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideLine1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextName"
            android:inputType="textFilter"


            style="@style/TextInputEditText"
            android:layout_marginBottom="16dp" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDescription"
        style="@style/TextInputLayout"
        android:hint="@string/new_album_description"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextDescription"

        style="@style/TextInputEditText"  />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/createNewPlaylistButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textColor="@color/color_white"

        android:backgroundTint="@color/colors_AEAFB4_AEAFB4"
        app:cornerRadius="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/dimen16"  />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updatePlaylistButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/savePlaylist"
        android:textColor="@color/color_white"

        android:visibility="gone"
        android:backgroundTint="@color/colors_AEAFB4_AEAFB4"
        app:cornerRadius="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/dimen16"  />



</androidx.constraintlayout.widget.ConstraintLayout>