<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".audio.ui.AudioPlayerFragment"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colors_FFFFFFFF_1A1B22"
    android:paddingTop="@dimen/dimen14"
    android:paddingEnd="@dimen/dimen16"
    android:paddingStart="@dimen/dimen16" >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <ImageView
        android:id="@+id/arrow_back"
        style="@style/arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/songCover"
        android:layout_marginTop="@dimen/dimen42"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"

        app:layout_constraintTop_toBottomOf="@+id/arrow_back"
        app:layout_constraintBottom_toTopOf="@+id/trackName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/dimen24"

        tools:src="@drawable/placeholder" />

    <!-- Название трека -->
    <TextView
        android:id="@+id/trackName"
        style="@style/YS_Medium_22"
        android:layout_marginTop="@dimen/dimen24"
        app:layout_constraintBottom_toTopOf="@+id/artistName"

        android:layout_marginBottom="@dimen/dimen12"
        app:layout_constraintStart_toStartOf="parent"

        tools:text="Еее бой" />

    <!-- Группа -->

    <TextView
        style="@style/YS_Medium_14"
        android:id="@+id/artistName"
        android:layout_marginTop="@dimen/dimen12"
        app:layout_constraintBottom_toBottomOf="@+id/guideLine"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Сосисочка" />


    <!-- Кнопки -->
    <ImageButton
        android:id="@+id/addToPlayList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.15"
        app:layout_constraintDimensionRatio="1:1"
        android:background="@drawable/audio_shape"
        android:backgroundTint="@color/AudioPlayer_RightAndLeftButtons"
        android:padding="15dp"
        android:scaleType="centerCrop"

        android:src="@drawable/add_to_play_list_icon"

        app:layout_constraintEnd_toStartOf="@+id/play_button"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/play_button"
        app:layout_constraintTop_toTopOf="@+id/play_button" />

    <com.bignerdranch.playlistmaker.audio.ui.PlaybackButtonView
        android:id="@+id/play_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintDimensionRatio="1:1"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/audio_shape"
        android:backgroundTint="@color/colors_1A1B22_FFFFFF"
        android:padding="15dp"
        app:playIcon="@drawable/play_arrow_icon"
        app:pauseIcon="@drawable/pause_icon"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/guideLine"
        app:layout_constraintEnd_toStartOf="@+id/addToLike"
        app:layout_constraintStart_toEndOf="@+id/addToPlayList"/>

    <ImageButton
        android:id="@+id/addToLike"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.15"
        app:layout_constraintDimensionRatio="1:1"
        android:background="@drawable/audio_shape"
        android:src="@drawable/empty_like"
        android:backgroundTint="@color/AudioPlayer_RightAndLeftButtons"
        android:padding="15dp"
        android:scaleType="centerCrop"

        app:layout_constraintBottom_toBottomOf="@+id/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/play_button"
        app:layout_constraintTop_toTopOf="@+id/play_button"/>


    <!-- Время проигрыша трека -->
    <TextView
        style="@style/YS_Medium_14"
        android:id="@+id/durationInRealTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen12"
        android:text="00:00"
        app:layout_constraintTop_toBottomOf="@+id/play_button"
        app:layout_constraintStart_toStartOf="@+id/play_button"
        app:layout_constraintEnd_toEndOf="@+id/play_button" />

    <!-- Длительность -->
    <TextView
        style="@style/YS_Regular_13"
        android:id="@+id/duration"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/durationInRealTime"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/song_duration" />

    <TextView
        style="@style/YS_Regular_13_for_values"
        android:id="@+id/durationTime"
        app:layout_constraintTop_toTopOf="@+id/duration"
        app:layout_constraintBottom_toBottomOf="@+id/duration"
        app:layout_constraintStart_toEndOf="@id/duration"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="00:00" />

    <!-- Альбом -->
    <TextView
        style="@style/YS_Regular_13"
        android:id="@+id/albom"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/duration"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/song_album" />

    <TextView
        style="@style/YS_Regular_13_for_values"
        android:id="@+id/album"
        app:layout_constraintTop_toTopOf="@+id/albom"
        app:layout_constraintBottom_toBottomOf="@+id/albom"
        app:layout_constraintStart_toEndOf="@id/albom"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text=" Neo" />

    <!-- год -->
    <TextView
        style="@style/YS_Regular_13"
        android:id="@+id/year"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albom"
        android:text="@string/song_year" />

    <TextView
        style="@style/YS_Regular_13_for_values"
        android:id="@+id/songYear"
        app:layout_constraintTop_toTopOf="@+id/year"
        app:layout_constraintBottom_toBottomOf="@+id/year"
        app:layout_constraintStart_toEndOf="@id/year"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="1999" />

    <!-- Стиль -->
    <TextView
        style="@style/YS_Regular_13"
        android:id="@+id/style"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year"
        android:text="@string/song_style" />

    <TextView
        style="@style/YS_Regular_13_for_values"
        android:id="@+id/songStyle"
        app:layout_constraintTop_toTopOf="@+id/style"
        app:layout_constraintBottom_toBottomOf="@+id/style"
        app:layout_constraintStart_toEndOf="@id/style"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="rock" />

    <!-- страна -->
    <TextView
        style="@style/YS_Regular_13"
        android:id="@+id/country"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/style"
        android:text="@string/song_country" />

    <TextView
        style="@style/YS_Regular_13_for_values"
        android:id="@+id/songCountry"
        app:layout_constraintTop_toTopOf="@+id/country"
        app:layout_constraintBottom_toBottomOf="@+id/country"
        app:layout_constraintStart_toEndOf="@id/country"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Россия" />

</androidx.constraintlayout.widget.ConstraintLayout>


    <!-- Bottom Sheet для плейлистов -->
    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bottom_sheet_playlists"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/sheet_bottom"
        android:orientation="vertical"
        android:paddingHorizontal="8dp"

        app:behavior_hideable="true"

        app:behavior_peekHeight="200dp"

        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:id="@+id/bottom_sheet_handle"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/sheet_tap_shape"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            style="@style/text_search_error"
            android:layout_width="match_parent"

            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/addToPlaylist" />

        <Button
            android:id="@+id/newPlaylistButton"
            style="@style/button_for_updateButton_and_clearSearchList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="24dp"
            android:text="@string/new_playlist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlistInSheetRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_track"
            tools:itemCount="3"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>